package eng.jAtcSim.newLib.speeches;

import eng.eSystem.collections.*;

public class Confirmation extends Response {
  public Confirmation(ICommand origin) {
    super(origin);
  }
}
