package eng.jAtcSim.newLib.speeches;

public interface ICommand extends ISpeech {

}
