package eng.jAtcSim.newLib.speeches.airplane;

import eng.jAtcSim.newLib.speeches.airplane.IPlaneSpeech;

public interface INotification extends IPlaneSpeech {
}
