package eng.jAtcSim.newLib.speeches.airplane;

import eng.jAtcSim.newLib.speeches.base.ISpeech;

public interface IPlaneSpeech extends ISpeech {
}
