package eng.jAtcSim.newLib.speeches.atc;

import eng.jAtcSim.newLib.messaging.IMessageContent;

public interface IAtcSpeech extends IMessageContent {
}
