package eng.jAtcSim.newLib.speeches.base;

public interface ISpeech {
}
