package eng.jAtcSim.newLib.speeches.system;

public interface ISystemNotification extends ISystemSpeech {
}
