package eng.jAtcSim.newLib.speeches.system;

import eng.jAtcSim.newLib.speeches.base.ISpeech;

public interface ISystemSpeech extends ISpeech {
}
